--- a/blocks/scss/common.scss
+++ b/blocks/scss/common.scss
@@ -8,7 +8,15 @@ p {
     margin: 0;
 }
 
+ul, li, a, h1, h2, h3, h4, h5, h6 {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+}
+
 .container {
     margin: 0 auto;
     max-width: 1600px;
+    
 }
