--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,5 @@
 
 @import url(../blocks/css/common.css);
 @import url(../blocks/css/header.css);
+@import url(../blocks/css/main.css);
+@import url(../blocks/css/menu/menu-block.css);
