--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -18,8 +18,18 @@ header .header .logo__menu {
   width: 35px;
   margin-right: 20px;
 }
+@media (max-width: 768px) {
+  header .header .logo__menu {
+    margin-right: 10px;
+  }
+}
 header .header .logo__menu:hover {
   cursor: pointer;
+}
+@media (max-width: 768px) {
+  header .header .logo__fin {
+    width: 70px;
+  }
 }
 header .header .user {
   display: flex;
@@ -29,6 +39,11 @@ header .header .user__name {
   font-size: 19px;
   line-height: 1.33;
   color: #fff;
+}
+@media (max-width: 768px) {
+  header .header .user__name {
+    font-size: 14px;
+  }
 }
 header .header .user__icon {
   width: 40px;
