--- a/styles/css/menu/menu-block.css
+++ b/styles/css/menu/menu-block.css
@@ -2,17 +2,28 @@
   position: absolute;
   display: grid;
   grid-template-rows: repeat(5, 35px);
-  background-color: #fff;
-  gap: 15px;
+  background-color: rgb(255, 255, 255);
+  padding-top: 10px;
+  border-radius: 10px;
+  height: 300px;
+  gap: 10px;
   left: -350px;
   transition: left 0.2s linear;
+  box-shadow: 10px 0px 5px rgba(163, 163, 163, 0.3);
 }
 .navigation__item {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 10px;
+  padding: 10px;
   width: 250px;
+}
+.navigation__item:hover {
+  background-color: rgba(163, 163, 163, 0.3);
+}
+.navigation__item--active {
+  background-color: rgba(163, 163, 163, 0.3);
+  height: 45px;
 }
 .navigation__item_img {
   margin-right: 10px;
