--- a/styles/scss/common.scss
+++ b/styles/scss/common.scss
@@ -1,7 +1,5 @@
 #app {
     font-family: 'Helvetica Neue', Arial, sans-serif;
-    width: 100vw;
-    height: 100vh;
 }
 
 p {
@@ -13,10 +11,15 @@ ul, li, a, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     text-decoration: none;
     list-style: none;
+    color: #000;
 }
 
 .container {
     margin: 0 auto;
     max-width: 1600px;
     
+}
+
+main {
+    padding: 0;
 }
