--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -17,9 +17,18 @@ header {
             &__menu {
                 width: 35px;
                 margin-right: 20px;
+                @media (max-width: 768px) {
+                    margin-right: 10px;
+                }
 
                 &:hover {
                     cursor: pointer;
+                }
+            }
+
+            &__fin {
+                @media (max-width: 768px) {
+                    width: 70px;
                 }
             }
         }
@@ -32,6 +41,10 @@ header {
                 font-size: 19px;
                 line-height: 1.33;
                 color: #fff;
+
+                @media (max-width: 768px) {
+                    font-size: 14px;
+                }
             }
 
             &__icon {
