--- a/styles/scss/menu/menu-block.scss
+++ b/styles/scss/menu/menu-block.scss
@@ -2,17 +2,30 @@
     position: absolute;
     display: grid;
     grid-template-rows: repeat(5, 35px);
-    background-color: #fff;
-    gap: 15px;
+    background-color: rgb(255, 255, 255);
+    padding-top: 10px;
+    border-radius: 10px;
+    height: 300px;
+    gap: 10px;
     left: -350px;
     transition: left .2s linear;
+    box-shadow: 10px 0px 5px rgba(163, 163, 163, 0.3);
 
     &__item {
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-left: 10px;
+        padding: 10px;
         width: 250px;
+
+        &:hover {
+            background-color: rgba(163, 163, 163, 0.3);
+        }
+
+        &--active {
+            background-color: rgba(163, 163, 163, 0.3);
+            height: 45px;
+        }
 
         &_img {
             margin-right: 10px;
