add wallets page

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,3 +6,4 @@
 @import url(../styles/css/menu/menu-block.css);
 
 @import url(../styles/css/dashboard.css);
+@import url(../styles/css/wallets.css);
