измененена структура приложения

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -28,3 +28,13 @@ tr  {
     height: 40px;
     
 }
+
+.text-elepsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.selected {
+    background-color: rgba(163, 163, 163, 0.185);
+}
