--- a/src/components/wallets/style_wallets/wallets.scss
+++ b/src/components/wallets/style_wallets/wallets.scss
@@ -65,7 +65,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            background: url(../../images/wallets/wallet-background.svg) no-repeat;
+            background: url(../../../assets/images/wallets/wallet-background.svg) no-repeat;
             object-fit: cover;
             background-size: 100%;
             width: 200px;
