Добавлено пополнение кошелька и страница настроек

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -10,3 +10,5 @@
 @import url(@/components/reports/style_reports/reports.scss);
 
 @import url(@/components/single_select/style_singleselect/single-select.scss);
+@import url(@/components/modal/style_modal/modal-window.scss);
+@import url(@/components/loader/style_loader/loader.scss);
