--- a/src/components/helpers/modal/style_modal/modal-window.scss
+++ b/src/components/helpers/modal/style_modal/modal-window.scss
@@ -5,13 +5,14 @@
     height: 100vh;
     background: rgb(0 0 0 / 40%);
     left: 0;
+    z-index: 2;
 }
 
 .modal {
     position: absolute;
     display: flex;
     flex-direction: column;
-    z-index: 2;
+    z-index: 3;
     border: none;
     top: 40%;
     padding: 30px 15px 15px;
@@ -26,7 +27,7 @@
         width: 25px;
 
         background-repeat: no-repeat;
-        background-image: url(../../../assets/images/close_icon.svg);
+        background-image: url(../../../../assets/images/close_icon.svg);
 
         &:hover {
             cursor: pointer;
