--- a/src/components/pages/reports/style_reports/reports.scss
+++ b/src/components/pages/reports/style_reports/reports.scss
@@ -12,7 +12,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            background: url(../../../assets/images/wallets/wallet-background.svg) no-repeat;
+            background: url(../../../../assets/images/wallets/wallet-background.svg) no-repeat;
             object-fit: cover;
             background-size: 100%;
             width: 200px;
@@ -74,20 +74,6 @@
     }
 
     &-header {
-        .export-btn {
-            background-color: rgba(68, 0, 255, 0.692);
-            height: 40px;
-            border-radius: 20px;
-            padding: 5px 10px;
-            border: none;
-            color: #fff;
-            text-transform: uppercase;
-            &:hover {
-                cursor: pointer;
-                box-shadow: 0 0 7px grey;
-            }
-        }
-
         display: flex;
         justify-content: space-between;
         align-items: baseline;
