--- a/src/components/pages/wallets/style_wallets/wallets.scss
+++ b/src/components/pages/wallets/style_wallets/wallets.scss
@@ -65,7 +65,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            background: url(../../../assets/images/wallets/wallet-background.svg) no-repeat;
+            background: url(../../../../assets/images/wallets/wallet-background.svg) no-repeat;
             object-fit: cover;
             background-size: 100%;
             width: 200px;
@@ -122,5 +122,18 @@
                 }
             }
         }
+    }
+}
+
+.create-wallet-btn {
+    border: none;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 255, 0.592);
+    color: #fff;
+    height: 25px;
+
+    &:hover{
+        cursor: pointer;
+            box-shadow: 0px 0px 5px rgba(28, 117, 219, 0.5);
     }
 }
