--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -18,3 +18,4 @@
 @import url(@/components/pages/dashboard/style_dashboard/dashboard.scss);
 @import url(@/components/pages/wallets/style_wallets/wallets.scss);
 @import url(@/components/pages/reports/style_reports/reports.scss);
+@import url(@/components/pages/settings/style_settings/settings.scss);
