--- a/src/components/helpers/modal/style_modal/modal-window.scss
+++ b/src/components/helpers/modal/style_modal/modal-window.scss
@@ -46,7 +46,7 @@
 
     &__balance {
         font-size: 40px;
-        font-family: 'Gilroy';
+        font-family: "Gilroy";
         color: blue;
     }
 
@@ -79,5 +79,32 @@
     &:hover {
         cursor: default !important;
         box-shadow: none !important;
+    }
+}
+
+.edit {
+    &__input {
+        margin-bottom: 20px;
+        max-width: 250px;
+        border-radius: 10px;
+        border-color: rgba(128, 128, 128, 0.199);
+        padding: 0 10px;
+        width: calc(100% - 20px);
+        height: 23px;
+    }
+
+    &__btn {
+        background-color: rgba(0, 0, 255, 0.705);
+        border-radius: 10px;
+        border: 2px solid rgb(17, 0, 255);
+        width: 120px;
+        height: 30px;
+        text-transform: uppercase;
+        color: #fff;
+
+        &:hover {
+            cursor: pointer;
+            box-shadow: 0 0 5px grey;
+        }
     }
 }
