--- a/src/components/pages/dashboard/style_dashboard/dashboard.scss
+++ b/src/components/pages/dashboard/style_dashboard/dashboard.scss
@@ -3,7 +3,7 @@
     grid-template-columns: minmax(100px, 40%) minmax(100px, 80%);
     grid-template-rows: repeat(2, minmax(300px, 1fr));
     gap: 15px;
-    padding: 15px 15px ;
+    padding: 15px 15px;
 
     @media (max-width: 800px) {
         grid-template-columns: repeat(1, minmax(100px, 1fr));
@@ -108,6 +108,10 @@
         }
 
     }
+}
+
+.select-wallet {
+    margin: 15px 15px 10px;
 }
 
 #spending {
