--- a/src/components/blocks/menu_block/style_menu/menu.scss
+++ b/src/components/blocks/menu_block/style_menu/menu.scss
@@ -1,16 +1,25 @@
 .navigation {
-    position: absolute;
+    position: fixed;
     display: grid;
     grid-template-rows: repeat(5, 35px);
     background-color: rgb(255, 255, 255);
-    padding-top: 10px;
-    border-radius: 10px;
-    height: 300px;
+    padding-top: 30px;
+    border-radius: 0 10px;
+    height: 100%;
     gap: 10px;
-    left: -350px;
-    transition: left .2s linear;
+    left: -100%;
     box-shadow: 10px 0px 5px rgba(163, 163, 163, 0.3);
-    z-index: 1;
+    z-index: 3;
+    margin-top: -60px;
+    transition: left 0.2s linear;
+
+    @media (max-width: 426px) {
+        display: flex;
+        flex-direction: column;
+        border-radius: 0;
+        width: 100%;
+        box-shadow: none;
+    }
 
     &__item {
         display: flex;
