Добавлена страница авторизации и регистрации

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -19,3 +19,5 @@
 @import url(@/components/pages/wallets/style_wallets/wallets.scss);
 @import url(@/components/pages/reports/style_reports/reports.scss);
 @import url(@/components/pages/settings/style_settings/settings.scss);
+@import url(@/components/pages/autorization/style_autorization/autorization.scss);
+@import url(@/components/pages/register/style_register/register.scss);
