--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.scss);
 @import url(./common.scss);
+@import url(./lists.scss);
 
 @import url(@/components/blocks/header_block/style_header/header.scss);
 @import url(@/components/blocks/menu_block/style_menu/menu.scss);
