--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,12 +1,20 @@
 #app {
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 p {
     margin: 0;
 }
 
-ul, li, a, h1, h2, h3, h4, h5, h6 {
+ul,
+li,
+a,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     padding: 0;
     margin: 0;
     text-decoration: none;
@@ -14,43 +22,32 @@ ul, li, a, h1, h2, h3, h4, h5, h6 {
     color: #000;
 }
 
-.mr-10 {
-    margin-right: 10px;
-}
-
-.container {
-    margin: 0 auto;
-    max-width: 1600px;
-    
-}
-
 main {
     padding: 0;
     height: calc(100vh - 60px);
 }
 
-tr  {
+tr {
     height: 40px;
-    
 }
 
-.text-elepsis {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+thead {
+    background-color: rgba(0, 217, 255, 0.575);
 }
 
-.selected {
-    background-color: rgba(163, 163, 163, 0.185);
+input {
+    border-radius: 10px;
+    border-color: rgba(128, 128, 128, 0.199);
+    padding: 0 10px;
+    max-width: 300px;
+    height: 23px;
+
+    @media (max-width: 540px) {
+        width: 280px;
+    }
 }
 
-.grid-item {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(28, 117, 219, 0.5);
-    padding: 15px 20px;
-    border-radius: 20px;
+.container {
+    margin: 0 auto;
+    max-width: 1600px;
 }
-
-
