--- a/src/components/helpers/single_select/style_singleselect/single-select.scss
+++ b/src/components/helpers/single_select/style_singleselect/single-select.scss
@@ -22,7 +22,6 @@
             height: 10px;
             border-top: 2px solid #000000;
             border-right: 2px solid #000000;
-            margin-right: 0;
 
             &-top {
                 position: absolute;
@@ -44,7 +43,6 @@
         position: absolute;
         display: block;
         width: 100%;
-        margin-top: 5px;
         background: #fff;
 
         border: 1px solid rgba(128, 128, 128, 0.397);
@@ -75,4 +73,14 @@
             }
         }
     }
+}
+
+.selected {
+    background-color: rgba(163, 163, 163, 0.185);
+}
+
+.text-elepsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
