--- a/src/components/pages/register/style_register/register.scss
+++ b/src/components/pages/register/style_register/register.scss
@@ -18,22 +18,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        margin: 0 auto;
-        margin-top: 20px;
-
-        @media (max-width: 426px) {
-            margin-top: 60px;
-        }
-
-        &-input {
-            margin-bottom: 20px;
-            max-width: 250px;
-            border-radius: 10px;
-            border-color: rgba(128, 128, 128, 0.199);
-            padding: 0 10px;
-            width: 100%;
-            height: 23px;
-        }
+        margin: 40px auto 0;
         &-btn {
             background-color: rgb(255, 255, 255);
             border-radius: 10px;
@@ -49,7 +34,6 @@
 
         &-question {
             color: #fff;
-            margin-bottom: 20px;
 
             a {
                 color: #fff;
