--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,5 +1,7 @@
+@import './mixins.scss';
+
 #app {
-    font-family: "Helvetica Neue", Arial, sans-serif;
+    @include get_fonts("Helvetica Neue");
 }
 
 p {
@@ -50,4 +52,19 @@ input {
 .container {
     margin: 0 auto;
     max-width: 1600px;
+}
+
+:root {
+    --primary: #6979f8;
+    --primary-hover: #A5AFFB;
+    --second: #BE52F2;
+    --second-hover: #DBA5F5;
+    --success: #00C48C;
+    --success-hover: #7DDFC3;
+    --info: #004df4;
+    --info-hover: #66B5F8;
+    --warning: #FFA26B;
+    --warning-hover: #FFC7A6;
+    --danger: #FF647C;
+    --danger-hover: #FDAFBB;
 }
