--- a/src/components/helpers/modal/style_modal/modal-window.scss
+++ b/src/components/helpers/modal/style_modal/modal-window.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/styles/mixins';
+
 .black-layout {
     position: fixed;
     width: 100vw;
@@ -14,9 +16,10 @@
     position: absolute;
     display: flex;
     flex-direction: column;
+    align-items: center;
     z-index: 3;
     border: none;
-    top: 40%;
+    top: 30%;
     padding: 30px 30px 15px 15px;
     width: 300px;
     border-radius: 20px;
@@ -36,17 +39,9 @@
         }
     }
 
-    &__title {
-        margin: 0 0 15px;
-    }
-
-    &__sum {
-        margin: 15px 0;
-    }
-
     &__balance {
         font-size: 40px;
-        font-family: "Gilroy";
+        @include get_fonts("Gilroy", 40px);
         color: blue;
     }
 
@@ -54,20 +49,6 @@
         display: flex;
         align-items: center;
         gap: 15px;
-
-        .btn {
-            background-color: #fff;
-            border-radius: 10px;
-            border: 2px solid rgb(17, 0, 255);
-            width: 120px;
-            height: 30px;
-            text-transform: uppercase;
-
-            &:hover {
-                cursor: pointer;
-                box-shadow: 0 0 5px grey;
-            }
-        }
     }
 }
 
@@ -89,38 +70,5 @@
         padding: 0 10px;
         width: calc(100% - 20px);
         height: 23px;
-    }
-
-    &__btn {
-        background-color: rgba(0, 0, 255, 0.705);
-        border-radius: 10px;
-        border: 2px solid rgb(17, 0, 255);
-        width: 120px;
-        height: 30px;
-        text-transform: uppercase;
-        color: #fff;
-
-        &:hover {
-            cursor: pointer;
-            box-shadow: 0 0 5px grey;
-        }
-    }
-}
-
-.delete {
-
-    &__btn {
-        background-color: rgba(0, 0, 255, 0.705);
-        border-radius: 10px;
-        border: 2px solid rgb(17, 0, 255);
-        width: 120px;
-        height: 30px;
-        text-transform: uppercase;
-        color: #fff;
-
-        &:hover {
-            cursor: pointer;
-            box-shadow: 0 0 5px grey;
-        }
     }
 }
