--- a/src/components/pages/dashboard/style_dashboard/dashboard.scss
+++ b/src/components/pages/dashboard/style_dashboard/dashboard.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/styles/mixins';
+
 .dashboard {
     display: grid;
     grid-template-columns: minmax(100px, 40%) minmax(100px, 80%);
@@ -45,8 +47,7 @@
 
     &__transactions {
         h1 {
-            font-weight: 900;
-            font-size: 25px;
+            @include get_fonts('Arial', 25px, 900);
             line-height: 31px;
         }
 
@@ -61,8 +62,7 @@
                 justify-content: space-between;
 
                 &-category {
-                    font-weight: 800;
-                    font-size: 17px;
+                    @include get_fonts('Mulish', 17px, 800);
                     line-height: 21px;
                 }
             }
